--- a/app/pages/output/404.html
+++ b/app/pages/output/404.html
@@ -20,22 +20,25 @@
     <div class="header-right">
         <ul class="header-list">
             <li>
-                <a href="#">О студии</a>
+                <a href="#aboutMain" class="scrollTo">О студии</a>
             </li>
             <li>
-                <a href="#">Направления</a>
+                <a href="#teach" class="scrollTo">Направления</a>
             </li>
             <li>
-                <a href="#">Расписание</a>
+                <a href="#schedule" class="scrollTo">Расписание</a>
             </li>
             <li>
-                <a href="#">Цены</a>
+                <a href="#prices" class="scrollTo">Цены</a>
             </li>
             <li>
-                <a href="#">преподаватели</a>
+                <a href="#prepod" class="scrollTo">преподаватели</a>
             </li>
             <li>
-                <a href="#">Отзывы</a>
+                <a href="#review" class="scrollTo">Отзывы</a>
+            </li>
+            <li>
+                <a href="#contact" class="scrollTo">Контакты</a>
             </li>
         </ul>
         <div class="burger"><span></span></div>
@@ -85,7 +88,7 @@
         </div>
         <div class="row">
             <div class=" offset-lg-2 offset-md-1 offset-0 col-lg-8 col-md-10 col-12">
-                <h2>Запрашиваемая вами страница не&nbsp;найдена или перенесена.</h2>
+                <h3>Запрашиваемая вами страница не&nbsp;найдена или перенесена.</h3>
                 <p>Попробуйте воспользоваться меню
                 или <a href="/">перейти на главную</a></p>
             </div>
