--- a/app/pages/output/main.html
+++ b/app/pages/output/main.html
@@ -20,22 +20,25 @@
     <div class="header-right">
         <ul class="header-list">
             <li>
-                <a href="#">О студии</a>
+                <a href="#aboutMain" class="scrollTo">О студии</a>
             </li>
             <li>
-                <a href="#">Направления</a>
+                <a href="#teach" class="scrollTo">Направления</a>
             </li>
             <li>
-                <a href="#">Расписание</a>
+                <a href="#schedule" class="scrollTo">Расписание</a>
             </li>
             <li>
-                <a href="#">Цены</a>
+                <a href="#prices" class="scrollTo">Цены</a>
             </li>
             <li>
-                <a href="#">преподаватели</a>
+                <a href="#prepod" class="scrollTo">преподаватели</a>
             </li>
             <li>
-                <a href="#">Отзывы</a>
+                <a href="#review" class="scrollTo">Отзывы</a>
+            </li>
+            <li>
+                <a href="#contact" class="scrollTo">Контакты</a>
             </li>
         </ul>
         <div class="burger"><span></span></div>
@@ -139,7 +142,7 @@
             </div>
         </div>
     </section>
-    <section class="about-main-section">
+    <section id="aboutMain" class="about-main-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12">
