--- a/app/pages/output/main.html
+++ b/app/pages/output/main.html
@@ -174,7 +174,7 @@
             </div>
         </div>
     </section>
-    <section id="teach" class="teach-section">
+    <section id="teach" class="teach-section chosen-section">
         <div class="container">
             <p class="subtitle">Мы научим</p>
             <div class="flex-title">
@@ -187,15 +187,15 @@
             <div class="directions-wrp">
                 <div data-dir="child" class="directions directions-dance-block active">
                     <ul class="directions-dance-list directions-dance-list-js">
-                        <li data-dir="dance1" class="active">Классический балет <span><span>4-5 лет</span></span></li>
-                        <li data-dir="dance2">Детский танец <span><span>3,5-7 лет</span></span></li>
-                        <li data-dir="dance3">Современный танец (эстрадный танец) <span><span>5-12 лет</span></span></li>
-                        <li data-dir="dance4">ОФП гимнастика <span><span>5-10 лет</span></span></li>
-                        <li data-dir="dance5">Baby fitness <span><span>2,5-4 лет</span></span></li>
-                        <li data-dir="dance6">Детская аэройога <span><span>8-16 лет</span></span></li>
-                        <li data-dir="dance7">Силовые тренировки для подростков <span><span>до 18 лет</span></span></li>
-                        <li data-dir="dance8">Каратэ <span><span>Все возраста</span></span></li>
-                        <li data-dir="dance9">Бокс <span><span>Все возраста</span></span></li>
+                        <li data-dir="dance1" class="chosen-li active"><span class="chosen-span">Классический балет</span> <span><span>4-5 лет</span></span></li>
+                        <li data-dir="dance2" class="chosen-li"><span class="chosen-span">Детский танец</span> <span><span>3,5-7 лет</span></span></li>
+                        <li data-dir="dance3" class="chosen-li"><span class="chosen-span">Современный танец (эстрадный танец)</span> <span><span>5-12 лет</span></span></li>
+                        <li data-dir="dance4" class="chosen-li"><span class="chosen-span">ОФП гимнастика</span> <span><span>5-10 лет</span></span></li>
+                        <li data-dir="dance5" class="chosen-li"><span class="chosen-span">Baby fitness</span> <span><span>2,5-4 лет</span></span></li>
+                        <li data-dir="dance6" class="chosen-li"><span class="chosen-span">Детская аэройога</span> <span><span>8-16 лет</span></span></li>
+                        <li data-dir="dance7" class="chosen-li"><span class="chosen-span">Силовые тренировки для подростков</span> <span><span>до 18 лет</span></span></li>
+                        <li data-dir="dance8" class="chosen-li"><span class="chosen-span">Каратэ</span> <span><span>Все возраста</span></span></li>
+                        <li data-dir="dance9" class="chosen-li"><span class="chosen-span">Бокс</span> <span><span>Все возраста</span></span></li>
                     </ul>
                     <div class="directions-dance-content-wrp">
                         <div data-dir="dance1" class="directions-dance-content directions-dance-content-js active">
@@ -328,15 +328,15 @@
                 </div>
                 <div data-dir="old" class="directions directions-dance-block">
                     <ul class="directions-dance-list directions-dance-list-js-1">
-                        <li data-dir="dance1" class="active">Классический балет <span><span>4-5 лет</span></span></li>
-                        <li data-dir="dance2">Детский танец <span><span>3,5-7 лет</span></span></li>
-                        <li data-dir="dance3">Современный танец (эстрадный танец) <span><span>5-12 лет</span></span></li>
-                        <li data-dir="dance4">ОФП гимнастика <span><span>5-10 лет</span></span></li>
-                        <li data-dir="dance5">Baby fitness <span><span>2,5-4 лет</span></span></li>
-                        <li data-dir="dance6">Детская аэройога <span><span>8-16 лет</span></span></li>
-                        <li data-dir="dance7">Силовые тренировки для подростков <span><span>до 18 лет</span></span></li>
-                        <li data-dir="dance8">Каратэ <span><span>Все возраста</span></span></li>
-                        <li data-dir="dance9">Бокс <span><span>Все возраста</span></span></li>
+                        <li data-dir="dance1" class="active"><span class="chosen-span">Классический балет</span> <span><span>4-5 лет</span></span></li>
+                        <li data-dir="dance2" class="chosen-li"><span class="chosen-span">Детский танец</span> <span><span>3,5-7 лет</span></span></li>
+                        <li data-dir="dance3" class="chosen-li"><span class="chosen-span">Современный танец (эстрадный танец)</span> <span><span>5-12 лет</span></span></li>
+                        <li data-dir="dance4" class="chosen-li"><span class="chosen-span">ОФП гимнастика</span> <span><span>5-10 лет</span></span></li>
+                        <li data-dir="dance5" class="chosen-li"><span class="chosen-span">Baby fitness</span> <span><span>2,5-4 лет</span></span></li>
+                        <li data-dir="dance6" class="chosen-li"><span class="chosen-span">Детская аэройога</span> <span><span>8-16 лет</span></span></li>
+                        <li data-dir="dance7" class="chosen-li"><span class="chosen-span">Силовые тренировки для подростков</span> <span><span>до 18 лет</span></span></li>
+                        <li data-dir="dance8" class="chosen-li"><span class="chosen-span">Каратэ</span> <span><span>Все возраста</span></span></li>
+                        <li data-dir="dance9" class="chosen-li"><span class="chosen-span">Бокс</span> <span><span>Все возраста</span></span></li>
                     </ul>
                     <div class="directions-dance-content-wrp">
                         <div data-dir="dance1" class="directions-dance-content directions-dance-content-js-1 active">
@@ -1487,7 +1487,7 @@
             </div>
         </div>
     </section>
-    <section id="prices" class="prices-section">
+    <section id="prices" class="prices-section chosen-section">
         <div class="container">
             <p class="subtitle">Гибкие тарифы</p>
             <div class="flex-title">
@@ -1500,57 +1500,57 @@
             <div class="prices-content-wrp">
                 <div data-dir="price1" class="prices-content directions active">
                     <ul class="price-list week-wrp-js">
-                        <li data-week="day1" class="active">
+                        <li data-week="day1" class="active chosen-li">
                             <div class="prices-li">
-                                <p>Классический балет</p>
+                                <p><span class="chosen-span">Классический балет</span></p>
                                 <p>4-5 лет</p>
                             </div>
                         </li>
-                        <li data-week="day2">
+                        <li data-week="day2" class="chosen-li">
                             <div class="prices-li">
-                                <p>Детский танец</p>
+                                <p><span class="chosen-span">Детский танец</span></p>
                                 <p>4-5 лет</p>
                             </div>
                         </li>
                         <li data-week="day3">
                             <div class="prices-li">
-                                <p>Современный танец (эстрадный танец)</p>
+                                <p><span class="chosen-span">Современный танец (эстрадный танец)</span></p>
                                 <p>4-5 лет</p>
                             </div>
                         </li>
-                        <li data-week="day4">
+                        <li data-week="day4" class="chosen-li">
                             <div class="prices-li">
-                                <p>ОФП гимнастика</p>
+                                <p><span class="chosen-span">ОФП гимнастика</span></p>
                                 <p>4-5 лет</p>
                             </div>
                         </li>
-                        <li data-week="day5">
+                        <li data-week="day5" class="chosen-li">
                             <div class="prices-li">
-                                <p>Baby fitness</p>
+                                <p><span class="chosen-span">Baby fitness</span></p>
                                 <p>4-5 лет</p>
                             </div>
                         </li>
-                        <li data-week="day6">
+                        <li data-week="day6" class="chosen-li">
                             <div class="prices-li">
-                                <p>Детская аэройога</p>
+                                <p><span class="chosen-span">Детская аэройога</span></p>
                                 <p>4-5 лет</p>
                             </div>
                         </li>
-                        <li data-week="day7">
+                        <li data-week="day7" class="chosen-li">
                             <div class="prices-li">
-                                <p>Силовые тренировки для подростков</p>
+                                <p><span class="chosen-span">Силовые тренировки для подростков</span></p>
                                 <p>4-5 лет</p>
                             </div>
                         </li>
-                        <li data-week="day8">
+                        <li data-week="day8" class="chosen-li">
                             <div class="prices-li">
-                                <p>Каратэ</p>
+                                <p><span class="chosen-span">Каратэ</span></p>
                                 <p>Все возраста</p>
                             </div>
                         </li>
-                        <li data-week="day9">
+                        <li data-week="day9" class="chosen-li">
                             <div class="prices-li">
-                                <p>Бокс</p>
+                                <p><span class="chosen-span">Бокс</span></p>
                                 <p>Все возраста</p>
                             </div>
                         </li>
@@ -2083,39 +2083,39 @@
                 </div>
                 <div data-dir="price2" class="prices-content directions">
                     <ul class="price-list week-wrp-js">
-                        <li data-week="day1-1" class="active">
+                        <li data-week="day1-1" class="active chosen-li">
                             <div class="prices-li">
-                                <p>Взрослый танец</p>
+                                <p><span class="chosen-span">Взрослый танец</span></p>
                                 <p>4-5 лет</p>
                             </div>
                         </li>
-                        <li data-week="day2-1">
+                        <li data-week="day2-1" class="chosen-li">
                             <div class="prices-li">
-                                <p>Все возраста танец</p>
+                                <p><span class="chosen-span">Все возраста танец</span></p>
                                 <p>40-50 лет</p>
                             </div>
                         </li>
-                        <li data-week="day3-1">
+                        <li data-week="day3-1" class="chosen-li">
                             <div class="prices-li">
-                                <p>Все возраста танец</p>
+                                <p><span class="chosen-span">Все возраста танец</span></p>
                                 <p>4-5 лет</p>
                             </div>
                         </li>
-                        <li data-week="day4-1">
+                        <li data-week="day4-1" class="chosen-li">
                             <div class="prices-li">
-                                <p>Взрослый Детский танец</p>
+                                <p><span class="chosen-span">Взрослый Детский танец</span></p>
                                 <p>40-140 лет</p>
                             </div>
                         </li>
-                        <li data-week="day5-1">
+                        <li data-week="day5-1" class="chosen-li">
                             <div class="prices-li">
-                                <p>Детский Взрослый танец</p>
+                                <p><span class="chosen-span">Детский Взрослый танец</span></p>
                                 <p>14-50 лет</p>
                             </div>
                         </li>
-                        <li data-week="day6-1">
+                        <li data-week="day6-1" class="chosen-li">
                             <div class="prices-li">
-                                <p>Взрослый танец</p>
+                                <p><span class="chosen-span">Взрослый танец</span></p>
                                 <p>Взрослый</p>
                             </div>
                         </li>
@@ -2741,7 +2741,7 @@
         </div>
         <div class="pop-up-overlay-wrapper">
             <div class="overlay-pop-up"></div>
-            <div id="form" class="pop-up-general-block">
+            <div id="form" class="pop-up-general-block active">
     <p class="form-title">Записаться на&nbsp;занятие</p>
     <form>
         <div class="input-block">
@@ -2751,16 +2751,16 @@
                     <label for="categorySelect2"></label>
                     <select class="input-valid select-parent" id="categorySelect2">
                         <option value="Силовые тренировки для подростков">Силовые тренировки для подростков</option>
-                        <option value="Категория2">Категория2</option>
-                        <option value="Категория3">Категория3</option>
+                        <option value="Детский танец">Детский танец</option>
+                        <option value="Baby fitness">Baby fitness</option>
                         <option value="Категория4">Категория4</option>
                     </select>
                     <div class="custom-select-head placeholder"><span>Силовые тренировки для подростков</span></div>
                     <div class="custom-select-list-wrapper">
                         <ul class="custom-select-list select-parent">
                             <li data-cat="cat1" data-value="Силовые тренировки для подростков">Силовые тренировки для подростков</li>
-                            <li data-cat="cat2" data-value="Категория2">Категория2</li>
-                            <li data-cat="cat3" data-value="Категория3">Категория3</li>
+                            <li data-cat="cat2" data-value="Детский танец">Детский танец</li>
+                            <li data-cat="cat3" data-value="Baby fitness">Baby fitness</li>
                             <li data-cat="cat4" data-value="Категория4">Категория4</li>
                         </ul>
                     </div>
